# analytics

./: .gitignore  README.md
script/: README.md  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
script/example/: README.md  package.json  pnpm-lock.yaml  vite.config.js
script/example/src/: app.html  hooks.client.js
script/example/src/routes/: +layout.svelte  +page.svelte
script/example/src/routes/api/v1/[project]/[event]/: +server.ts
script/example/src/routes/api/v1/[project]/visit/: +server.ts
script/src/: browser.ts  lib.ts  script.js
server/: .env  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
server/config/: server.toml  timezones.json
server/migrations/: 20230906191316_create-tables.sql  20230908140854_create-hypertables.sql
server/src/: config.rs  database.rs  log.rs  main.rs  server.rs  shutdown.rs
server/src/api/: layers.rs  mod.rs  routes.rs  server.rs
