[package]
name = "server"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
config = { version = "0.13.3", default-features = false, features = ["toml"] }
convert_case = "0.6.0"
dotenv = { version = "0.15.0", optional = true }
humantime = "2.1.0"
humantime-serde = "1.1.1"
phf = "0.11.2"
scc = "2.0.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7.1", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono", "json"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["parking_lot"] }
warp = { version = "0.3.5", features = ["compression"] }

[features]
default = ["dotenv"]

[build-dependencies]
phf = "0.11.2"
phf_codegen = "0.11.2"
serde_json = "1.0.105"
